# OhLordy

./: .flake8  .gitignore  ohlordy.py  ohlordy.service  pyproject.toml  rpi-install.sh
